--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "csv-validator",
   "version": "0.0.1",
   "description": "csv parser with validator",
-  "main": "index.js",
+  "main": "./lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
