--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
   "dependencies": {
     "csvtojson": "^1.1.9"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jettcalleja/csv-validator.git"
+  },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.10.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^4.0.1",
+    "should": "^13.1.3"
   }
 }
